Updated app properties so it connects to correct database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://ec2-63-176-52-116.eu-central-1.compute.amazonaws.com:5432/Reddit
+spring.datasource.url=jdbc:postgresql://ec2-63-176-52-116.eu-central-1.compute.amazonaws.com:5432/reddit
 spring.datasource.username=user
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
