--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,12 @@
             <version>3.0.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+            <version>9.16.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
