--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+spring.flyway.baseline-on-migrate=true
+
 spring.datasource.url=jdbc:postgresql://ec2-63-176-52-116.eu-central-1.compute.amazonaws.com:5432/reddit
 spring.datasource.username=user
 spring.datasource.password=password
