--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -13,6 +13,7 @@
     <artifactId>backend</artifactId>
     <name>backend</name>
     <description>Spring Boot backend</description>
+    <packaging>jar</packaging>
 
     <properties>
         <java.version>17</java.version>
@@ -67,6 +68,13 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
 
             <!-- Compilează cu Java 17 și expune numele parametrilor pentru Spring (@PathVariable/@RequestParam) -->
