--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -11,6 +11,9 @@ spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.open-in-view=false
+spring.jpa.properties.hibernate.jdbc.time_zone=Europe/Bucharest
+spring.jackson.time-zone=Europe/Bucharest
+spring.jackson.serialization.write-dates-as-timestamps=false
 
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=10MB
